--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/spam.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/spam.adoc
@@ -29,7 +29,108 @@ with a configurable score threshold. Usually a message will only be
 considered as spam if it matches multiple criteria; matching just a single test
 will not usually be enough to reach the threshold. Note that this mailet is executed on a per-user basis.
 
+=== Rspamd
+
+The Rspamd extension (optional) requires an extra configuration file `rspamd.properties` to configure RSpamd connection
+
+.rspamd.properties content
+|===
+| Property name | explanation
+
+| rSpamdUrl
+| URL defining the Rspamd's server. Eg: http://rspamd:11334
+
+| rSpamdPassword
+| Password for pass authentication when request to Rspamd's server. Eg: admin
+|===
+
+`RspamdScanner` supports the following options:
+
+* You can specify the `virusProcessor` if you want to enable virus scanning for mail. Upon configurable `virusProcessor`
+you can specify how James process mail virus. We provide a sample Rspamd mailet and `virusProcessor` configuration:
+
+* You can specify the `rejectSpamProcessor`. Emails marked as `rejected` by Rspamd will be redirected to this
+processor. This corresponds to emails with the highest spam score, thus delivering them to users as marked as spam
+might not even be desirable.
+
+* The `rewriteSubject` option allows to rewritte subjects when asked by Rspamd.
+
+* The `perUserScans` allows to specify if scans should be done on a per user basis, enabling per user scan results based on
+  their own per-user bayes database. This is achieved through the use of Rspamd `Deliver-To` HTTP header. If true, Rspamd
+  will be called for each recipient of the mail, which comes at a performance cost. If true, subjects are not rewritten.
+  If true `virusProcessor` and `rejectSpamProcessor` are honnered per user, at the cost of email copies.
+  Defaults to false.
+
+
+Here is an example of mailet pipeline conducting out RspamdScanner execution:
+
+....
+<processor state="local-delivery" enableJmx="true">
+    <mailet match="All" class="org.apache.james.rspamd.RspamdScanner">
+        <perUserScans>false</perUserScans>
+        <rewriteSubject>true</rewriteSubject>
+        <virusProcessor>virus</virusProcessor>
+        <rejectSpamProcessor>spam</rejectSpamProcessor>
+    </mailet>
+    <mailet match="IsMarkedAsSpam=org.apache.james.rspamd.status" class="WithStorageDirective">
+        <targetFolderName>Spam</targetFolderName>
+    </mailet>
+    <mailet match="All" class="LocalDelivery"/>
+</processor>
+
+<!--Choose one between these two following virus processor, or configure a custom one if you want-->
+<!--Hard reject virus mail-->
+<processor state="virus" enableJmx="false">
+    <mailet match="All" class="ToRepository">
+        <repositoryPath>file://var/mail/virus/</repositoryPath>
+    </mailet>
+</processor>
+
+<!--Soft reject virus mail-->
+<processor state="virus" enableJmx="false">
+    <mailet match="All" class="StripAttachment">
+        <remove>all</remove>
+        <pattern>.*</pattern>
+    </mailet>
+    <mailet match="All" class="AddSubjectPrefix">
+        <subjectPrefix>[VIRUS]</subjectPrefix>
+    </mailet>
+    <mailet match="All" class="LocalDelivery"/>
+</processor>
+
+<!--Store rejected spam emails (with a very high score) -->
+<processor state="virus" enableJmx="false">
+    <mailet match="All" class="ToRepository">
+        <repositoryPath>cassandra://var/mail/spam</repositoryPath>
+    </mailet>
+</processor>
+....
+
+==== Feedback for Rspamd
+If enabled, the `RspamdListener` will base on the Mailbox event to detect the message is a spam or not, then James will send report `spam` or `ham` to Rspamd
+The Rspamd listener needs to explicitly be registered with xref:configure/listeners.adoc[listeners.xml].
+
+Example:
+
+....
+<listeners>
+    <listener>
+        <class>org.apache.james.rspamd.RspamdListener</class>
+    </listener>
+</listeners>
+....
+
+For more detail about how to use Rspamd's extension: `third-party/rspamd/index.md`
+
+Alternatively, batch reports can be triggered on user mailbox content via webAdmin. link:https://github.com/apache/james-project/tree/master/third-party/rspamd#additional-webadmin-endpoints[Read more].
+
 === SpamAssassin
+
+The SpamAssassin mailet supports the following options:
+
+* perUserScans: Boolean. If true spamAssassin is called on a per user basis which comes at a performance cost but
+allows per-user feedback. Defaults to true.
+
 Here is an example of mailet pipeline conducting out SpamAssassin execution:
 
 ....
@@ -37,6 +138,7 @@ Here is an example of mailet pipeline conducting out SpamAssassin execution:
     <onMailetException>ignore</onMailetException>
     <spamdHost>spamassassin</spamdHost>
     <spamdPort>783</spamdPort>
+    <perUserScans>false</perUserScans>
 </mailet>
 <mailet match="All" class="MailAttributesToMimeHeaders">
     <!-- This mailet is not required, but useful to have SpamAssassin score in headers-->
@@ -59,7 +161,7 @@ the table. Also, the correct approach is to send the original spam or non-spam
 as an attachment to another message sent to the feeder in order to avoid bias from the
 current sender's email header.
 
-=== Feedback for SpamAssassin
+==== Feedback for SpamAssassin
 
 If enabled, the `SpamAssassinListener` will asynchronously report users mails moved to the `Spam` mailbox as Spam,
 and other mails as `Ham`, effectively populating the user database for per user spam detection. This enables a per-user
@@ -92,45 +194,3 @@ Example:
   </listener>
 </listeners>
 ....
-
-== Rspamd
-
-The Rspamd extension (optional) requires an extra configuration file `rspamd.properties` to configure RSpamd connection
-
-.rspamd.properties content
-|===
-| Property name | explanation
-
-| rSpamdUrl
-| URL defining the Rspamd's server. Eg: http://rspamd:11334
-
-| rSpamdPassword
-| Password for pass authentication when request to Rspamd's server. Eg: admin
-|===
-
-
-Here is an example of mailet pipeline conducting out RspamdScanner execution:
-
-....
-<mailet match="All" class="org.apache.james.rspamd.RspamdScanner">
-</mailet>
-<mailet match="IsMarkedAsSpam=org.apache.james.rspamd.status" class="WithStorageDirective">
-    <targetFolderName>Spam</targetFolderName>
-</mailet>
-....
-
-=== Feedback for Rspamd
-If enabled, the `RspamdListener` will base on the Mailbox event to detect the message is a spam or not, then James will send report `spam` or `ham` to Rspamd
-The Rspamd listener needs to explicitly be registered with xref:configure/listeners.adoc[listeners.xml].
-
-Example:
-
-....
-<listeners>
-    <listener>
-        <class>org.apache.james.rspamd.RspamdListener</class>
-    </listener>
-</listeners>
-....
-
-For more detail about how to use Rspamd's extension: `third-party/rspamd/index.md`
