JAMES-3812 Provide a ToPlainText mailet

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/mailets.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/mailets.adoc
@@ -138,6 +138,8 @@ include::partial$ServerTime.adoc[]
 
 include::partial$SPF.adoc[]
 
+include::partial$ToPlainText.adoc[]
+
 include::partial$ToSenderFolder.adoc[]
 
 include::partial$UnwrapText.adoc[]
