[ADR] Write missing ADRs for recent work
 - ADR 57: Reactive IMAP
 - ADR 58: Upgrade to Netty 4
 - ADR 59: Upgrade to Cassandra driver 4
 - ADR 60: Adopt bounded elastic
 - ADR 61: Delegation
 - ADR 62: OIDC token introspection
 - ADR 63: Prevent temporary file leaks

--- a/src/adr/0051-oidc.md
+++ b/src/adr/0051-oidc.md
@@ -6,7 +6,9 @@ Date: 2021-12-06
 
 Accepted (lazy consensus).
 
-Not yet implemented.
+Implemented.
+
+Complemented by [ADR-62](0062-oidc-token-introspection.md).
 
 ## Context
 
