--- a/server/apps/distributed-app/docs/modules/ROOT/partials/RemoteDelivery.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/partials/RemoteDelivery.adoc
@@ -46,6 +46,7 @@ to switch the connection to a TLS-protected connection before issuing any login 
 * *sslEnable* (optional) - a Boolean (true/false) indicating whether to use SSL to connect and use the SSL port unless
 explicitly overridden. Default is false. Setting up to true will result in delivery attempts in SMTPS on port 465 with a fallback
 to SMTP on port 25. The trust-store if needed can be customized by *-Djavax.net.ssl.trustStore=/root/conf/keystore*.
+* *verifyServerIdentity* (optional) - a Boolean (true/false) indicating whether to match the remote server name against its certificate on TLS connections. Default is true. Disabling this runs the risk of someone spoofing a legitimate server and intercepting mails, but may be necessary to contact servers that have strange certificates, no DNS entries, are reachable by IP address only, and similar edge cases.
 * *gateway* (optional) - a String containing a comma separated list of patterns defining the gateway servers to be used to
 deliver mail regardless of the recipient address. If multiple gateway servers are defined, each will be tried in definition order
 until delivery is successful. If none are successful, the mail is bounced. The pattern is *host[:port]* where:
@@ -75,16 +76,20 @@ the ability to perform their own problem resolutions.
 
 ==== Security
 
-You can use the *mail.smtp.ssl.enable* javax property described above to force SMTP outgoing delivery to default to SSL
-encrypted traffic.
+You can use the *sslEnable* parameter described above to force SMTP outgoing delivery to default to SSL encrypted traffic (SMTPS).
+This is a shortcut for the *mail.smtps.ssl.enable* javax property.
 
-When enabling SSL, you might need to specify *mail.smtp.ssl.checkserveridentity* and *mail.smtp.ssl.trust*
-properties. You can also control ciphersuites and protocols via *mail.smtp.ssl.ciphersuites* and
-*mail.smtp.ssl.protocols* properties.
+When enabling SSL, you might need to specify the *mail.smtps.ssl.trust* property as well.
+You can also control ciphersuites and protocols via *mail.smtps.ssl.ciphersuites* and
+*mail.smtps.ssl.protocols* properties.
 
-*startTls* can alternatively be enabled upon sending a mail. For this, use the *startTls* configuration property, serving as a shortcut for
+StartTLS can alternatively be enabled upon sending a mail. For this, use the *startTls* parameter, serving as a shortcut for the
 javax *mail.smtp.starttls.enable* property. Depending on how strict your security policy is, you might consider
 *mail.smtp.starttls.required* as well. Be aware that configuring trust will then be required.
+You can also use other javax properties for StartTLS, but their property prefix must be *mail.smtp.ssl.* in this case. 
+
+James enables server identity verification by default. In certain rare edge cases you might disable it via the *verifyServerIdentity* parameter,
+or use the *mail.smtps.ssl.checkserveridentity* and *mail.smtp.ssl.checkserveridentity* javax properties for fine control.
 
 Read https://javaee.github.io/javamail/docs/api/com/sun/mail/smtp/package-summary.html[*com.sun.mail.smtp*]
 for full information.
