[JAMES-1516] update Antora documentation

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/ssl.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/ssl.adoc
@@ -48,6 +48,23 @@ An optional secret might be specified for the private key:
 </tls>
 ....
 
+Optionally, TLS protocols and/or cipher suites can be specified explicitly (smtpserver.xml, pop3server.xml, imapserver.xml,..).
+Otherwise, the default protocols and cipher suites of the used JDK will be used:
+....
+<tls socketTLS="true" startTLS="false">
+  <supportedProtocols>
+    <protocol>TLSv1.2</protocol>
+    <protocol>TLSv1.1</protocol>
+    <protocol>TLSv1</protocol>
+    <protocol>SSLv3</protocol>
+  </supportedProtocols>
+  <supportedCipherSuites>
+    <cipherSuite>TLS_AES_256_GCM_SHA384</cipherSuite>
+    <cipherSuite>TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256</cipherSuite>
+  </supportedCipherSuites>
+</tls>
+....
+
 Each of these block has an optional boolean configuration element <b>socketTLS</b> and <b>startTLS</b> which is used to toggle
 use of SSL or TLS for the service.
 
