--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/spam.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/spam.adoc
@@ -42,6 +42,12 @@ The Rspamd extension (optional) requires an extra configuration file `rspamd.pro
 
 | rSpamdPassword
 | Password for pass authentication when request to Rspamd's server. Eg: admin
+
+| rspamdTimeout
+| Integer. Timeout for http requests to Rspamd. Default to 15 seconds.
+
+| perUserBayes
+| Boolean. Whether to scan/learn mails using per-user Bayes. Default to false.
 |===
 
 `RspamdScanner` supports the following options:
@@ -55,19 +61,15 @@ might not even be desirable.
 
 * The `rewriteSubject` option allows to rewritte subjects when asked by Rspamd.
 
-* The `perUserScans` allows to specify if scans should be done on a per user basis, enabling per user scan results based on
-their own per-user bayes database. This is achieved through the use of Rspamd `Deliver-To` HTTP header. If true, Rspamd
-will be called for each recipient of the mail, which comes at a performance cost. If true, subjects are not rewritten.
-If true `virusProcessor` and `rejectSpamProcessor` are honnered per user, at the cost of email copies.
-Defaults to false.
-
+This mailet can scan mails against per-user Bayes by configure `perUserBayes` in `rspamd.properties`. This is achieved
+through the use of Rspamd `Deliver-To` HTTP header. If true, Rspamd will be called for each recipient of the mail, which comes at a performance cost. If true, subjects are not rewritten.
+If true `virusProcessor` and `rejectSpamProcessor` are honnered per user, at the cost of email copies. Default to false.
 
 Here is an example of mailet pipeline conducting out RspamdScanner execution:
 
 ....
 <processor state="local-delivery" enableJmx="true">
     <mailet match="All" class="org.apache.james.rspamd.RspamdScanner">
-        <perUserScans>false</perUserScans>
         <rewriteSubject>true</rewriteSubject>
         <virusProcessor>virus</virusProcessor>
         <rejectSpamProcessor>spam</rejectSpamProcessor>
@@ -104,7 +106,8 @@ Here is an example of mailet pipeline conducting out RspamdScanner execution:
 ....
 
 ==== Feedback for Rspamd
-If enabled, the `RspamdListener` will base on the Mailbox event to detect the message is a spam or not, then James will send report `spam` or `ham` to Rspamd
+If enabled, the `RspamdListener` will base on the Mailbox event to detect the message is a spam or not, then James will send report `spam` or `ham` to Rspamd.
+This listener can report mails to per-user Bayes by configure `perUserBayes` in `rspamd.properties`.
 The Rspamd listener needs to explicitly be registered with xref:configure/listeners.adoc[listeners.xml].
 
 Example:
