--- a/src/homepage/_posts/2022-10-28-jspf-1.0.2.markdown
+++ b/src/homepage/_posts/2022-10-28-jspf-1.0.2.markdown
@@ -1,20 +1,15 @@
 ---
 layout: post
-title:  "Apache James JSPF 1.0.2"
-date:   2022-10-28  01:16:30 +0200
+title:  "Apache James JSPF 1.0.3"
+date:   2022-12-30  01:16:30 +0200
 categories: james update
 ---
 
-The Apache James developers are pleased to announce the 1.0.2 release of the JSPF library.
+The Apache James developers are pleased to announce the 1.0.3 release of the JSPF library.
 
 Early adopters can [download it][download], any issue can be reported on our issue [tracker][tracker].
 
-This release:
-
- - Upgrade dependencies
- - Uses DSNJava asynchronous capabilities
- - Uses JDK 8 as the build target
- - Fix NPE while expanding %{p} (JSPF-99)
+This release fixes error management for DSNJava asynchronous capabilities
 
 The Apache James PMC would like to thanks all contributors who made this release possible!
 
