--- a/server/apps/distributed-app/docs/modules/ROOT/pages/extending/index.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/extending/index.adoc
@@ -22,6 +22,8 @@ add features to your SMTP server.
 Writing xref:extending/webadmin-routes.adoc[WebAdmin routes] enables to
 add features to the WebAdmin REST API.
 
+Writing xref:extending/imap.adoc[IMAP extensions].
+
 The link:https://github.com/apache/james-project/tree/master/examples[examples] are also a good reference.
 
 == Handling injections for your extensions
